--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>juego de papel piedra y tijera</h1>
+    <p>
+        la reglas del juego: <br><br>
+        papel le gana a piedra <br>
+        piedra gana a tijieras <br>
+        tijera gana a papel 
+    </p>
+
+    <h2>eleige la opcion</h2>
+
+    <button id="tijera">tijera✌</button>
+    <button id="papel">papel🖐</button>
+    <button id="piedra">piedra👊</button>
+
+    <span id="usuario"></span><br><br>
+    <p>la seleccion de la maquina fue:</p><br>
+
+    <span id="maquina"></span>
+
+    <h3>resultado</h3>
+    <span id="resuktado"></span>
+
+    <h3>marcador</h3>
+    <p>Usuario / Maquina </p>
+    <span id="marcadorUno"></span><span id="marcadorDos"></span>
 </body>
 </html>
