--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,300;0,800;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -17,9 +18,9 @@
 
     <h2>eleige la opcion</h2>
 
-    <button id="tijera">tijera✌</button>
-    <button id="papel">papel🖐</button>
-    <button id="piedra">piedra👊</button>
+    <button id="tijera" value="2">tijera✌</button>
+    <button id="papel" value="1">papel🖐</button>
+    <button id="piedra" value="0">piedra👊</button>
 
     <span id="usuario"></span><br><br>
     <p>la seleccion de la maquina fue:</p><br>
@@ -27,10 +28,11 @@
     <span id="maquina"></span>
 
     <h3>resultado</h3>
-    <span id="resuktado"></span>
+    <span id="resultado"></span>
 
     <h3>marcador</h3>
     <p>Usuario / Maquina </p>
     <span id="marcadorUno"></span><span id="marcadorDos"></span>
+    <script src="js/app.js"></script>
 </body>
 </html>
