--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>juego de papel piedra y tijera</h1>
+    <div class="contenedor">
+        <h1>juego de papel piedra y tijera</h1>
     <p>
         la reglas del juego: <br><br>
         papel le gana a piedra <br>
@@ -32,7 +33,9 @@
 
     <h3>marcador</h3>
     <p>Usuario / Maquina </p>
-    <span id="marcadorUno"></span><span id="marcadorDos"></span>
+    <span id="marcadorUno"></span>--<span id="marcadorDos"></span>
+    </div>
+    
     <script src="js/app.js"></script>
 </body>
 </html>
